--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">MorningAssistant</string>
+    <string name = "app_name">Morning Assistant</string>
+    <string name = "Alarm_set">Set Alarm:</string>
+    <string name = "off">Turn off alarm</string>
+    <string name = "set">Set Alarm</string>
+    <string name = "message">Alarm will turn off once you have gotten out of bed and
+        moved at least 10 feet.</string>
 </resources>
+
