--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name = "off">Turn off alarm</string>
     <string name = "set">Set Alarm</string>
     <string name = "message">Alarm will turn off once you have gotten out of bed and
-        moved at least 10 feet.</string>
+        taken at least 10 steps.</string>
 
     <string name="lbl_you_are_at">YOU ARE AT</string>
     <string name="btn_get_location">GET MY LOCATION</string>
